2009-11-27 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex_SerializedHashtable.php (AutoloaderIndex_SerializedHashtable::save()):
    Raceconditions were possible during saving the index. Saving is done now atomically.

2009-11-29 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::autoload()):
    Instead of throwing an exception the class will be defined as a derivation
    of AutoloaderPseudoClass. AutoloaderPseudoClass helps to throw the exception
    in a normal application context.