@@ -45,11 +45,18 @@ class TestAutoloader extends PHPUnit_Framework_TestCase {
     
     
     /**
-     * @expectedException AutoloaderException_SearchFailed
      * @dataProvider provideTestExceptionsOnLoadingFailure
      */
-    public function testExceptionsOnLoadingFailure($class) {
-    	$object = new $class();
+    public function testExceptionsOnLoadingFailure($class, $missingClass) {
+    	try {
+    	   $object = new $class();
+    	   $this->fail("Expecting AutoloaderException_SearchFailed for class $class.");
+    	   
+    	} catch (AutoloaderException_SearchFailed $e) {
+    		// expected
+    		$this->assertEquals($missingClass, $e->getClass());
+    		
+    	}
     }
 	
 	
@@ -233,9 +240,17 @@ class TestAutoloader extends PHPUnit_Framework_TestCase {
 	public function provideTestExceptionsOnLoadingFailure() {
 		$classes = array();
 		
-		//TODO weitere Testfälle
+		$missingParentClass = uniqid("class");
+		$classWithoutParent = $this->makeClass(
+		  "child",
+		  "provideTestExceptionsOnLoadingFailure",
+		  "<?php class %name% extends $missingParentClass {}"
+		);
+		$classes[] = array($classWithoutParent, $missingParentClass);
 		
-		$classes[] = array(uniqid("class"));
+		
+		$missingClass = uniqid("class");
+		$classes[] = array($missingClass, $missingClass);
 		
 		return $classes;
 	}
